--- a/build.gradle
+++ b/build.gradle
@@ -25,13 +25,15 @@ dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-web'
 	implementation 'org.springframework.boot:spring-boot-starter-webflux'
 	compileOnly 'org.projectlombok:lombok'
-	runtimeOnly 'com.h2database:h2:1.4.197'
-	runtimeOnly 'io.r2dbc:r2dbc-h2'
+	implementation 'com.h2database:h2'
 	annotationProcessor 'org.projectlombok:lombok'
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 	testImplementation 'io.projectreactor:reactor-test'
 	testImplementation 'org.springframework.security:spring-security-test'
-	implementation 'io.r2dbc:r2dbc-h2'
+	testImplementation 'com.h2database:h2'
+	implementation ('io.r2dbc:r2dbc-h2') {
+		exclude module: 'h2'
+	}
 }
 
 test {
